[gd_scene load_steps=21 format=2]

[ext_resource path="res://Resources/Mobs/MOB_BUG/bug.gd" type="Script" id=1]
[ext_resource path="res://Resources/Mobs/NEW_BOSS/spritesheet (8).png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 20.9619, 33.3392 )

[sub_resource type="Animation" id=2]
resource_name = "down_atk"
length = 1.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.0124493, 0.3, 0.5, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 8, 9, 10, 11 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("nb_down_atk/down_atk:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.9, 1.1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ true, false, true ]
}

[sub_resource type="Animation" id=3]
resource_name = "down_walk"
length = 0.3
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 6, 7 ]
}

[sub_resource type="Animation" id=4]
resource_name = "left_atk"
length = 1.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 23 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("nb_left_atk/left_atk:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ true, false, true ]
}

[sub_resource type="Animation" id=5]
resource_name = "left_walk"
length = 0.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 5, 6, 7 ]
}

[sub_resource type="Animation" id=6]
resource_name = "right_atk"
length = 1.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.00302324, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 23 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("nb_right_atk/right_atk:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ true, false, true ]
}

[sub_resource type="Animation" id=7]
resource_name = "right_walk"
length = 0.3
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 6, 7 ]
}

[sub_resource type="Animation" id=8]
resource_name = "up_atk"
length = 1.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("nb_up_atk/up_atk:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ true, false, true ]
}

[sub_resource type="Animation" id=9]
resource_name = "up_walk"
length = 0.3
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 6, 7 ]
}

[sub_resource type="CircleShape2D" id=10]
radius = 214.067

[sub_resource type="RectangleShape2D" id=11]
extents = Vector2( 38.958, 31.9897 )

[sub_resource type="RectangleShape2D" id=12]
extents = Vector2( 37.1285, 31.4824 )

[sub_resource type="RectangleShape2D" id=13]
extents = Vector2( 33.1572, 24.8045 )

[sub_resource type="RectangleShape2D" id=14]
extents = Vector2( 31.6978, 31.128 )

[sub_resource type="RectangleShape2D" id=15]
extents = Vector2( 38.3144, 27.9967 )

[sub_resource type="RectangleShape2D" id=16]
extents = Vector2( 42.0691, 26.6763 )

[sub_resource type="RectangleShape2D" id=17]
extents = Vector2( 42.5423, 29.7458 )

[sub_resource type="RectangleShape2D" id=18]
extents = Vector2( 49.0964, 30.2091 )

[node name="NEW_BOSS" type="KinematicBody2D"]
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( -0.179764, 1.05376 )
scale = Vector2( 0.418436, 0.424055 )
texture = ExtResource( 2 )
hframes = 27
frame = 11

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 1.4272, -8.42715 )
shape = SubResource( 1 )

[node name="VisibilityEnabler2D" type="VisibilityEnabler2D" parent="."]
position = Vector2( -1.40897, -33.8205 )
scale = Vector2( 0.998096, 1 )
process_parent = true
physics_process_parent = true

[node name="anim" type="AnimationPlayer" parent="."]
anims/down_atk = SubResource( 2 )
anims/down_walk = SubResource( 3 )
anims/left_atk = SubResource( 4 )
anims/left_walk = SubResource( 5 )
anims/right_atk = SubResource( 6 )
anims/right_walk = SubResource( 7 )
anims/up_atk = SubResource( 8 )
anims/up_walk = SubResource( 9 )

[node name="nb_detection" type="Area2D" parent="."]
visible = false

[node name="detect" type="CollisionShape2D" parent="nb_detection"]
position = Vector2( 0.868652, 2.62086 )
shape = SubResource( 10 )

[node name="nb_down_atk" type="Area2D" parent="."]
visible = false

[node name="down_atk" type="CollisionShape2D" parent="nb_down_atk"]
position = Vector2( -0.891826, 65.6225 )
shape = SubResource( 11 )
disabled = true

[node name="nb_down_atk_range" type="Area2D" parent="."]
visible = false

[node name="down_atk" type="CollisionShape2D" parent="nb_down_atk_range"]
position = Vector2( -1.36118, 75.6993 )
shape = SubResource( 12 )

[node name="nb_up_atk" type="Area2D" parent="."]
visible = false

[node name="up_atk" type="CollisionShape2D" parent="nb_up_atk"]
position = Vector2( 2.42442, -77.6249 )
shape = SubResource( 13 )
disabled = true

[node name="nb_up_atk_range" type="Area2D" parent="."]
visible = false

[node name="up_atk" type="CollisionShape2D" parent="nb_up_atk_range"]
position = Vector2( 2.22499, -85.7426 )
shape = SubResource( 14 )

[node name="nb_left_atk" type="Area2D" parent="."]
visible = false

[node name="left_atk" type="CollisionShape2D" parent="nb_left_atk"]
position = Vector2( -66.7518, -15.1753 )
shape = SubResource( 15 )
disabled = true

[node name="nb_left_atk_range" type="Area2D" parent="."]
visible = false

[node name="left_atk" type="CollisionShape2D" parent="nb_left_atk_range"]
position = Vector2( -80.9318, -15.0554 )
shape = SubResource( 16 )

[node name="nb_right_atk" type="Area2D" parent="."]
visible = false

[node name="right_atk" type="CollisionShape2D" parent="nb_right_atk"]
position = Vector2( 68.4962, -14.6933 )
shape = SubResource( 17 )
disabled = true

[node name="nb_right_atk_range" type="Area2D" parent="."]
visible = false

[node name="right_atk" type="CollisionShape2D" parent="nb_right_atk_range"]
position = Vector2( 80.4609, -14.5796 )
shape = SubResource( 18 )
[connection signal="body_entered" from="nb_detection" to="." method="_on_nb_detection_body_entered"]
[connection signal="body_exited" from="nb_detection" to="." method="_on_nb_detection_body_exited"]
[connection signal="body_entered" from="nb_down_atk" to="." method="_on_nb_down_atk_body_entered"]
[connection signal="body_entered" from="nb_down_atk_range" to="." method="_on_nb_down_atk_range_body_entered"]
[connection signal="body_exited" from="nb_down_atk_range" to="." method="_on_nb_down_atk_range_body_exited"]
[connection signal="body_entered" from="nb_up_atk" to="." method="_on_nb_up_atk_body_entered"]
[connection signal="body_entered" from="nb_up_atk_range" to="." method="_on_nb_up_atk_range_body_entered"]
[connection signal="body_exited" from="nb_up_atk_range" to="." method="_on_nb_up_atk_range_body_exited"]
[connection signal="body_entered" from="nb_left_atk" to="." method="_on_nb_left_atk_body_entered"]
[connection signal="body_entered" from="nb_left_atk_range" to="." method="_on_nb_left_atk_range_body_entered"]
[connection signal="body_exited" from="nb_left_atk_range" to="." method="_on_nb_left_atk_range_body_exited"]
[connection signal="body_entered" from="nb_right_atk" to="." method="_on_nb_right_atk_body_entered"]
[connection signal="body_entered" from="nb_right_atk_range" to="." method="_on_nb_right_atk_range_body_entered"]
[connection signal="body_exited" from="nb_right_atk_range" to="." method="_on_nb_right_atk_range_body_exited"]
